[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "relative_mode"
version = "0.0.4"
authors = [
  { name="Tuomas Eerola", email="tuomaseerola39@gmail.com" },
]
description = "Relative Mode Estimation from audio files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tuomaseerola/relative_mode"
"Bug Tracker" = "https://github.com/tuomaseerola/relative_mode/issues"